# btldr

./: .ccls  .clang-format  .gitignore  .gitmodules  BUILD  CMakeLists.txt  Makefile  README.md  WORKSPACE  atmega16m1.ld  compile.bzl  toolchain.cmake
client/: can.c  can.h  can_client.c  can_client.h  client.h  commands.c  commands.h  ecus.yaml  flash.c  main.c  ping.c
docs/: flash.puml  ping.puml  presentation.md
docs/diagrams/: activity.puml  state.puml
lib/: BUILD  can.c  can.h  can_drv.c  can_drv.h  can_isp.c  can_isp.h  can_isp_commands.c  can_lib.c  can_lib.h  crc32.c  crc32.h  debug.c  debug.h  flash.c  flash.h  image.c  image.h  mob.h  shared_mem.c  shared_mem.h  shmem.c
lib/_libcan/: can_drv.c  can_drv.h  can_isp_protocol.h  reduced_can_lib.c
lib/_libisp/: isp_lib.c
lib/libcan/: can.h
old/IAR_CAN_bootloader/: IAR_can_boot_loader.ewp  IAR_can_boot_loader.eww  can128_iar_can_bootloader_link.xcl  can32_iar_can_bootloader_link.xcl  can64_iar_can_bootloader_link.xcl  config.h  licence.txt  m16m1c1_iar_can_bootloader_link.xcl  m32m1c1_iar_can_bootloader_link.xcl  m64m1c1_iar_can_bootloader_link.xcl  main_can_boot_loader.c
old/IAR_CAN_bootloader/settings/: IAR_can_boot_loader.cspy.bat  IAR_can_boot_loader.wsdt
old/Libraries/: header_template.c
old/Libraries/lib_board/: dvk90can1_board.h  mc310_board.h  stk524_board.h  stk600_at90canxx_board.h  stk600_atmegaxxm1c1_board.h
old/Libraries/lib_mcu/: at90canxx_drv.h  atmegaxxm1c1_drv.h  iar_compiler.h
old/Libraries/lib_mcu/can/: can_drv.c  can_isp_protocol.c  reduced_can_lib.c  reduced_can_lib.h
old/Libraries/lib_mcu/eeprom/: eeprom_drv.h  eeprom_lib.c  eeprom_lib.h
old/Libraries/lib_module/isp/: isp_lib.h
scripts/: BUILD  parse_header.c  patch_header.c
src/: btldr.c  can_isp.c  can_isp.h  can_isp_commands.c  commands.c  config.h  image.c  image.h  lib.c  main.c
src/bootloader/: can_bootloader.c
(+4 files in other folders)
